{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 37,
  "lineage": "e2cb8a74-1dde-1945-7218-dc2cfc2409d0",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:973516475030:security-group/sg-085b25f518b0176a5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-085b25f518b0176a5",
            "ingress": [],
            "name": "argocd-gitops-dev-cluster-cluster-sg20251022161408609400000005",
            "name_prefix": "argocd-gitops-dev-cluster-cluster-sg",
            "owner_id": "973516475030",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "argocd-gitops-dev-cluster-cluster-sg",
              "Project": "argocd-gitops"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "argocd-gitops-dev-cluster-cluster-sg",
              "Project": "argocd-gitops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dea047c64f574c92"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-094b974b567bf63bc",
            "arn": "arn:aws:ec2:us-west-2:973516475030:elastic-ip/eipalloc-094b974b567bf63bc",
            "domain": "vpc",
            "id": "eipalloc-094b974b567bf63bc",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-35-83-199-10.us-west-2.compute.amazonaws.com",
            "public_ip": "35.83.199.10",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "argocd-gitops-dev-nat-1",
              "Project": "argocd-gitops"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "argocd-gitops-dev-nat-1",
              "Project": "argocd-gitops"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c389b44ab61e8224",
            "arn": "arn:aws:ec2:us-west-2:973516475030:elastic-ip/eipalloc-0c389b44ab61e8224",
            "domain": "vpc",
            "id": "eipalloc-0c389b44ab61e8224",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-35-164-40-113.us-west-2.compute.amazonaws.com",
            "public_ip": "35.164.40.113",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "argocd-gitops-dev-nat-2",
              "Project": "argocd-gitops"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "argocd-gitops-dev-nat-2",
              "Project": "argocd-gitops"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:973516475030:internet-gateway/igw-097d35bb0ff82fd2b",
            "id": "igw-097d35bb0ff82fd2b",
            "owner_id": "973516475030",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "argocd-gitops-dev-igw",
              "Project": "argocd-gitops"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "argocd-gitops-dev-igw",
              "Project": "argocd-gitops"
            },
            "vpc_id": "vpc-0dea047c64f574c92"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-094b974b567bf63bc",
            "association_id": "eipassoc-0d0425868c02053df",
            "connectivity_type": "public",
            "id": "nat-00fb8e83a6aae55be",
            "network_interface_id": "eni-03857840001b37e48",
            "private_ip": "10.0.1.84",
            "public_ip": "35.83.199.10",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08a33e1e1ef2ea925",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "argocd-gitops-dev-nat-1",
              "Project": "argocd-gitops"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "argocd-gitops-dev-nat-1",
              "Project": "argocd-gitops"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c389b44ab61e8224",
            "association_id": "eipassoc-01bfa76607761f854",
            "connectivity_type": "public",
            "id": "nat-062d585d38b920da0",
            "network_interface_id": "eni-07e292019a49df171",
            "private_ip": "10.0.2.53",
            "public_ip": "35.164.40.113",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0aa6b117c72dcc382",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "argocd-gitops-dev-nat-2",
              "Project": "argocd-gitops"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "argocd-gitops-dev-nat-2",
              "Project": "argocd-gitops"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:973516475030:route-table/rtb-0f0382b386af14221",
            "id": "rtb-0f0382b386af14221",
            "owner_id": "973516475030",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00fb8e83a6aae55be",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "argocd-gitops-dev-private-rt-1",
              "Project": "argocd-gitops"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "argocd-gitops-dev-private-rt-1",
              "Project": "argocd-gitops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dea047c64f574c92"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:973516475030:route-table/rtb-0cc83c68fd3faccd9",
            "id": "rtb-0cc83c68fd3faccd9",
            "owner_id": "973516475030",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-062d585d38b920da0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "argocd-gitops-dev-private-rt-2",
              "Project": "argocd-gitops"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "argocd-gitops-dev-private-rt-2",
              "Project": "argocd-gitops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dea047c64f574c92"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:973516475030:route-table/rtb-03fd8c2ab40977459",
            "id": "rtb-03fd8c2ab40977459",
            "owner_id": "973516475030",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-097d35bb0ff82fd2b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "argocd-gitops-dev-public-rt",
              "Project": "argocd-gitops"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "argocd-gitops-dev-public-rt",
              "Project": "argocd-gitops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dea047c64f574c92"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04dee26d753ecca03",
            "route_table_id": "rtb-0f0382b386af14221",
            "subnet_id": "subnet-038244a6b024b74df"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de05df661fe1ab13",
            "route_table_id": "rtb-0cc83c68fd3faccd9",
            "subnet_id": "subnet-03281f5f51c80f2e6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05828a9e6092a4da2",
            "route_table_id": "rtb-03fd8c2ab40977459",
            "subnet_id": "subnet-08a33e1e1ef2ea925"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c172ff71704960eb",
            "route_table_id": "rtb-03fd8c2ab40977459",
            "subnet_id": "subnet-0aa6b117c72dcc382"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:973516475030:subnet/subnet-038244a6b024b74df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-038244a6b024b74df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "973516475030",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "argocd-gitops-dev-private-1",
              "Project": "argocd-gitops",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "argocd-gitops-dev-private-1",
              "Project": "argocd-gitops",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0dea047c64f574c92"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:973516475030:subnet/subnet-03281f5f51c80f2e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03281f5f51c80f2e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "973516475030",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "argocd-gitops-dev-private-2",
              "Project": "argocd-gitops",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "argocd-gitops-dev-private-2",
              "Project": "argocd-gitops",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0dea047c64f574c92"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:973516475030:subnet/subnet-08a33e1e1ef2ea925",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08a33e1e1ef2ea925",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "973516475030",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "argocd-gitops-dev-public-1",
              "Project": "argocd-gitops",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "argocd-gitops-dev-public-1",
              "Project": "argocd-gitops",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0dea047c64f574c92"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:973516475030:subnet/subnet-0aa6b117c72dcc382",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa6b117c72dcc382",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "973516475030",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "argocd-gitops-dev-public-2",
              "Project": "argocd-gitops",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "argocd-gitops-dev-public-2",
              "Project": "argocd-gitops",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0dea047c64f574c92"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:973516475030:vpc/vpc-0dea047c64f574c92",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06e19dac8f4e95b2f",
            "default_route_table_id": "rtb-01fa8ba167288e370",
            "default_security_group_id": "sg-08c020d694d8b1a69",
            "dhcp_options_id": "dopt-0ac3beb73688a3169",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dea047c64f574c92",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01fa8ba167288e370",
            "owner_id": "973516475030",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "argocd-gitops-dev-vpc",
              "Project": "argocd-gitops"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "argocd-gitops-dev-vpc",
              "Project": "argocd-gitops"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}